Attempt to fix shadow on mobile

--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -38,3 +38,9 @@
   background-position: center;
   border-radius: 15px;
 }
+
+@media (hover: none) {
+  .slider {
+    box-shadow: none
+  }
+}
